Make the Helmfile cleaner